tests/semantic/pass/infered-declaration3.tiger
let
	var x := "test"
in
	x := "test2"
end
