tests/semantic/fail/assignment-8.tiger
let
	var x := 0
	var y := ""
in
	x := y
end
